[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Abilities/Reflect.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 16.75 )

[node name="Reflect" type="Node2D"]
script = ExtResource( 1 )

[node name="PerfectReflect" type="Timer" parent="."]
wait_time = 0.011

[node name="ReflectTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="ReflectArea" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, -17 )
shape = SubResource( 1 )
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="ReflectTimer" to="." method="_on_ReflectTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
